Mejoras del codigo y reentrenamiento del modelo con 4epochs, sereemplazo el formato 5, se optimizo el preprocesamiento con keywords mejoradas,fijando el tamaño de las imagenes, descongelamiento de capas y reentreenamiento de la carpeta 3, añadiendo el chat.html que es elcodigo del chat interactivo

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,18 @@ annotations/*
 !annotations/readme.md
 test/*
 !test/readme.md
+
+# Modelos y datasets (muy pesados para que no suban al repositorio)
+resultados/modelo_*/        # Ignorar modelos
+resultados/fold_*/           # Ignorar checkpoints
+!resultados/*.npy            # Pero si subimos las  métricas
+!resultados/*.txt            # Pero subimos los  resúmenes
+datasets_layoutlmv3/         # ignoramos los datasets procesados
+
+# Outputs temporales
+resultados_json/
+
+# IDE
+.vscode/
+*.ipynb_checkpoints/
+*.ipynb
