--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ DATASETS_PATH=datasets_layoutlmv3
 OUTPUT_PATH=resultados
 NUM_FOLDS=5
 NUM_LABELS=9
-EPOCHS=1
+EPOCHS=1 (Si se quiere confirmar que el modelo funciona, 4 si queremos obtener mejores resultados)
 BATCH_SIZE=4
 LEARNING_RATE=5e-5
 
